fix keyboard layout issues

--- a/layout/styles.css
+++ b/layout/styles.css
@@ -1,80 +1,80 @@
 @import url("../assets/global.css");
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 h1 {
-  color: var(--gold);
-  font-weight: 900;
-  font-size: var(--fs-5);
+	color: var(--gold);
+	font-weight: 900;
+	font-size: var(--fs-5);
 }
 
 #keymap {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  padding: var(--s-m);
-  width: 100%;
+	display: flex;
+	flex-direction: column;
+	box-sizing: border-box;
+	padding: var(--s-m);
+	width: 100%;
 }
 
 .layer {
-  display: flex;
-  flex-direction: column;
-  background: var(--surface);
+	display: flex;
+	flex-direction: column;
+	background: var(--surface);
 
-  padding: var(--s-m);
+	padding: var(--s-m);
 
-  h2 {
-    color: var(--iris);
-    font-weight: 600;
-    font-size: var(--fs-2);
-  }
+	h2 {
+		color: var(--iris);
+		font-weight: 600;
+		font-size: var(--fs-2);
+	}
 }
 
 .preview {
-  display: flex;
-  row-gap: var(--s-3xs);
-  flex-direction: column;
+	display: flex;
+	row-gap: var(--s-3xs);
+	flex-direction: column;
 
-  * {
-    flex-grow: 1;
-  }
+	* {
+		flex-grow: 1;
+	}
 }
 
 .row {
-  display: grid;
-  grid-template-columns: repeat(18, 1fr);
-  column-gap: var(--s-3xs);
+	display: grid;
+	grid-template-columns: repeat(18, 1fr);
+	column-gap: var(--s-3xs);
 }
 
 .key {
-  display: flex;
-  flex-direction: column;
-  font-size: var(--fs--2);
+	display: flex;
+	flex-direction: column;
+	font-size: var(--fs--2);
 
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-all;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 .key,
 .empty-key {
-  background: var(--base);
-  padding: var(--s-3xs);
-  aspect-ratio: 1;
+	background: var(--base);
+	padding: var(--s-3xs);
+	min-height: var(--fs-5);
 }
 
 .type {
-  color: var(--subtle);
+	color: var(--subtle);
 }
 
 .special-type {
-  color: var(--pine);
+	color: var(--pine);
 }
 
 .value {
-  text-align: center;
+	text-align: center;
 }
